--- a/Unity/Unity.Editor.Plugins.csproj
+++ b/Unity/Unity.Editor.Plugins.csproj
@@ -5,16 +5,16 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{C17F48D3-964E-E97C-3D2E-966F7A6C6D93}</ProjectGuid>
+    <ProjectGuid>{81A6E58E-BFF2-F1C8-1C4E-6316985F642C}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AssemblyName>Assembly-CSharp-Editor</AssemblyName>
+    <AssemblyName>Assembly-CSharp-Editor-firstpass</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <TargetFrameworkProfile></TargetFrameworkProfile>
     <CompilerResponseFile></CompilerResponseFile>
-    <UnityProjectType>Editor:5</UnityProjectType>
+    <UnityProjectType>EditorPlugins:7</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>2017.1.0p5</UnityVersion>
     <RootNamespace></RootNamespace>
@@ -144,53 +144,9 @@
       <Project>{CF118143-7E37-744F-BE45-3F55345FEC40}</Project>
       <Name>Unity</Name>
     </ProjectReference>
-    <ProjectReference Include="Unity.Editor.Plugins.csproj">
-      <Project>{81A6E58E-BFF2-F1C8-1C4E-6316985F642C}</Project>
-      <Name>Unity.Editor.Plugins</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\BehaviorNodeConfigExtension.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\BehaviorNodeData.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\BehaviorTreeConfigEditor.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\BehaviorTreeConfigExtension.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\BehaviorTreeData.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\BehaviorTreeMenu.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\BehaviorTreeNodeClassPopup.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\BehaviorTreeOperateUtility.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\BehaviorTreeTipsHelper.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\BTBatchOperation.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\BTDesignerUtility.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\BTEditor.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\BTEditorWindow.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\Component\BTDebugComponent.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\Component\BTNodeInfoComponent.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\CustomArrayField.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\Event\BehaviorTreeAfterChangeNodeTypeEvent_SelectNode.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\Event\BehaviorTreeClickNodeEvent_SelectNode.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\Event\BehaviorTreeConnectStateEvent_HandleConnectLines.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\Event\BehaviorTreeCreateNodeEvent_SelectNode.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\Event\BehaviorTreeMouseInNodeEvent_HandleOperate.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\Event\BehaviorTreeNewCreateClickEvent_CreateNode.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\Event\BehaviorTreeOpenEditorEvent_SelectNode.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\Event\BehaviorTreeOpenEditorEvent_UpdatePropList.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\Event\BehaviorTreeReplaceClickEvent_ReplaceNode.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\Event\BehaviorTreeRightDesignerDragEvent_ModifyRightBorder.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\Event\BehaviorTreeRunTreeEvent_ShowDebugInfo.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\FoldoutNode.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\GraphDesigner.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\NodeDesigner.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\NodeExtension.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\NodeMeta.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\NodeMetaHelper.cs" />
-    <Compile Include="Assets\Editor\BehaviorTreeEditor\PropertyDesigner.cs" />
-    <Compile Include="Assets\Editor\BuildEditor\BuildEditor.cs" />
-    <Compile Include="Assets\Editor\ExcelExporterEditor\ExcelExporterEditor.cs" />
-    <Compile Include="Assets\Editor\ExportNavmesh.cs" />
-    <Compile Include="Assets\Editor\ReferenceCollectorEditor\ReferenceCollectorEditor.cs" />
-    <Compile Include="Assets\Editor\RsyncEditor\RsyncConfig.cs" />
-    <Compile Include="Assets\Editor\RsyncEditor\RsyncEditor.cs" />
-    <Compile Include="Assets\Editor\ServerCommandLineEditor\ServerCommandLineEditor.cs" />
+    <Compile Include="Assets\Plugins\Editor\JetBrains\Unity3DRider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\JsonDotNet\Assemblies\AOT\Newtonsoft.Json.XML" />
