--- a/Server/App/NLog.config
+++ b/Server/App/NLog.config
@@ -8,7 +8,7 @@
 			fileName="${basedir}/../Logs/Log.txt"
 			deleteOldFileOnStartup="false"
 			layout="${longdate} ${var:appTypeFormat} ${var:appIdFormat} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=2} ${message}" />
-    <target name="all" type="Console"
+    <target name="all" type="ColoredConsole"
       layout="${longdate} ${var:appTypeFormat} ${var:appIdFormat} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=2} ${message}"/>
 	</targets>
 	
