1.增加一个初步打包工具，它会自动扫描Bundles子目录，子目录中每个prefab设置成一个包，共享资源放到共享包，每个包中打成一个图集 2.其它代码细微调整

--- a/Server/App/Server.App.csproj
+++ b/Server/App/Server.App.csproj
@@ -28,9 +28,10 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\..\Bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;SERVER</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MongoDB.Bson, Version=2.3.0.157, Culture=neutral, processorArchitecture=MSIL">
