更新项目到.net core2.0

--- a/Server/App/Properties/launchSettings.json
+++ b/Server/App/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Server.App": {
       "commandName": "Project",
-      "commandLineArgs": "--appId=1 --appType=AllServer --config=../Config/StartConfig/LocalAllServer.txt"
+      "workingDirectory": "D:\\Xnovae\\Egametang\\netcoreapp2.0"
     }
   }
 }
