--- a/Server/App/Properties/launchSettings.json
+++ b/Server/App/Properties/launchSettings.json
@@ -2,7 +2,8 @@
   "profiles": {
     "Server.App": {
       "commandName": "Project",
-      "commandLineArgs": "--appId=1 --appType=AllServer --config=../Config/StartConfig/LocalAllServer.txt"
+      "commandLineArgs": "--appId=1 --appType=AllServer --config=../Config/StartConfig/LocalAllServer.txt",
+      "workingDirectory": "D:\\Source\\Egametang\\netcoreapp2.0"
     }
   }
 }
