vs15.4的bug，hotfix要直接引用ScriptAssemblies/Assembly-CSharp.dll ScriptAssemblies/Assembly-CSharp-firstpass.dll debug没有问题

--- a/.gitignore
+++ b/.gitignore
@@ -41,4 +41,6 @@ _ReSharper.CSharp/
 /Release
 .idea/
 /Unity/Logs
+/Unity/Assets/StreamingAssets/
 /netcoreapp2.0
+/Unity/Assets/StreamingAssets.meta
